--- a/src/app/initial-sn-config/initial-sn-config.component.html
+++ b/src/app/initial-sn-config/initial-sn-config.component.html
@@ -129,7 +129,7 @@
     <ol>
       <li>Navigate to
         <samp>System Properties</samp> &rArr;
-        <samp>General Properties</samp>. If you are in the &quot;Util&quot; application scope, you will see the following message:
+        <samp>Basic Configuration</samp>. If you are in the &quot;Util&quot; application scope, you will see the following message:
         <img src="assets/images/initialConfig/globalApplicationWarning.png" alt="Example of application selection dialog" class="figure-img img-fluid rounded"
         /> This is intentional. It is important to ensure you are in the &quot;Util&quot; application scope, otherwise the
         next change will not be saved.
@@ -170,7 +170,7 @@
       <li>Ensure you are in the &quot;Global&quot; application scope.</li>
       <li>Navigate to
         <samp>System Properties</samp> &rArr;
-        <samp>General Properties</samp>.
+        <samp>Basic Configuration</samp>.
       </li>
       <li>Scroll to the &quot;Banner Image&quot; property and click on the
         <samp>+</samp> icon to upload the banner image.
