--- a/src/app/app-home/app-home.component.html
+++ b/src/app/app-home/app-home.component.html
@@ -17,28 +17,10 @@
   </div>
   <div class="card-body">
     There are 2 special repositories,
-    <a href="../ServiceNowServerDev" target="_blank">
-      <!-- <page-ref-heading-text menu-path="Scripting/ServiceNowServerDev" /> -->
-    </a>
+    <a href="../ServiceNowServerDev" target="_blank">Scripting/ServiceNowServerDev</a>
     and
-    <a href="../ServiceNowClientDev" target="_blank">
-      <!-- <page-ref-heading-text menu-path="Scripting/ServiceNowClientDev" /> -->
-    </a>, which are intended to assist with complex source code development for other applications. These repositories use node.js
+    <a href="../ServiceNowClientDev" target="_blank">Scripting/ServiceNowClientDev</a>, which are intended to assist with complex source code development for other applications. These repositories use node.js
     and NPM modules to compile TypeScript sources and generate JavaScript. This compiled JavaScript must then be manually
     ported to the actual JavaScript code that will be used in the individual applications.
-    <ul>
-      <li>
-        <!-- <page-ref-link menu-path="Scripting/DevEnvSetup" append-description="true" /> -->
-      </li>
-      <li>
-        <!-- <page-ref-link menu-path="Scripting/Snippets" append-description="true" /> -->
-      </li>
-      <li>
-        <!-- <page-ref-link menu-path="Scripting/ServiceNowServerDev" append-description="true" /> -->
-      </li>
-      <li>
-        <!-- <page-ref-link menu-path="Scripting/ServiceNowClientDev" append-description="true" /> -->
-      </li>
-    </ul>
   </div>
 </div>
