--- a/src/app/initial-sn-config/initial-sn-config.component.html
+++ b/src/app/initial-sn-config/initial-sn-config.component.html
@@ -1,6 +1,31 @@
 <div class="card">
   <div class="card-header">
-    <h2 id="loadInitialGlobalUpdate">1. Initial Global Update Set</h2>
+    <h2 id="createAdminAccount">1. Create Administrative Logins</h2>
+  </div>
+  <div class="card-body">
+    <div class="detail">Create application administrative accounts in ServiceNow and assign the following roles:
+      <ul>
+        <li>admin</li>
+        <li>security_admin</li>
+      </ul>
+    </div>
+    <div class="card">
+      <div class="card-header">
+        <h3>Accounts on internet cloud instance</h3>
+      </div>
+      <div class="card-body">
+        In order to properly attribute where changes were made, administrative accounts on internet cloud instances (hosted by ServiceNow)
+        the login account name should start with the person's last name, followed by their first initial, and end in "_da".
+        <br />Example:
+        <samp>Leonard Erwine &rArr; erwinel_da</samp>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="card-header">
+    <h2 id="loadInitialGlobalUpdate">2. Initial Global Update Set</h2>
   </div>
   <div class="card-body">
     <div class="detail">Load and apply the <a href="{{howtoImportUpdateSetFolder}}/{{howtoImportUpdateSetFileName}}" target="_blank">{{howtoImportUpdateSetFileName}}</a> File in the
@@ -11,7 +36,7 @@
 
 <div class="card">
   <div class="card-header">
-    <h2 id="importUtils">2. Import Utility Application</h2>
+    <h2 id="importUtils">3. Import Utility Application</h2>
   </div>
   <div class="card-body">
     <div class="detail">In this step you will be importing a utility application which includes many utility framework functionality to support
@@ -30,7 +55,7 @@
 
 <div class="card">
   <div class="card-header">
-    <h2 id="uiconfig">3. Initial Config</h2>
+    <h2 id="uiconfig">4. Initial Config</h2>
   </div>
   <div class="card-body">
     <div class="detail">In this step you will specify whether the current instance is for production, UAT, Testing, Development or if it is a
@@ -69,7 +94,7 @@
 
 <div class="card">
   <div class="card-header">
-    <h2 id="uploadLogoImage">4. Upload logo image</h2>
+    <h2 id="uploadLogoImage">5. Upload logo image</h2>
   </div>
   <div class="card-body">
     <div class="detail">To automate configuration settings for graphical images, it would require significant overhead. Therefore, the logo image
@@ -128,7 +153,7 @@
 
 <div class="card">
   <div class="card-header">
-    <h2 id="pluginActivate">5. Bulk Plugin Activation</h2>
+    <h2 id="pluginActivate">6. Bulk Plugin Activation</h2>
   </div>
   <div class="card-body">
     <div class="detail">In this step you will launch a fix script which will activate plugins in the background. Plugin activation progress can
@@ -153,7 +178,7 @@
 
 <div class="card">
   <div class="card-header">
-    <h2 id="importAdImport">6. Configure Active Directory Import</h2>
+    <h2 id="importAdImport">7. Configure Active Directory Import</h2>
   </div>
   <div class="card-body">
     <div class="detail"></div>
@@ -162,7 +187,7 @@
 
 <div class="card">
   <div class="card-header">
-    <h2 id="importGrpNameReg">7. Import Group Names Registry Application</h2>
+    <h2 id="importGrpNameReg">8. Import Group Names Registry Application</h2>
   </div>
   <div class="card-body">
     <div class="detail">The Group Names Registry applications provides a way of synchronizing User Group references between ServiceNow instances,
