--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,9 @@
     </li>
     <li class="nav-item border border-secondary bg-dark">
       <a routerLink="/dev-info" class="nav-link text-light">Dev Info</a>
-      <!-- <a target="_blank" rel="noopener" href="https://angular.io/tutorial" class="">Tour of Heroes</a> -->
+    </li>
+    <li class="nav-item border border-secondary bg-dark">
+      <a routerLink="/server-code-snippets" class="nav-link text-light">Server-Side Code Snippets</a>
     </li>
   </ul>
 </nav>
