--- a/Template/appContent.htm
+++ b/Template/appContent.htm
@@ -5,30 +5,34 @@
     </ul>
     <button class="btn btn-outline-success" type="button" title="System Information Settings" ng-click="appContentController.openSetupParametersEditDialog($event)"><img src="images/open-iconic/wrench.svg" width="8" height="8" alt="System Information Settings" /></button>
 </nav>
-<section ng-class="mainSectionClass" ng-transclude></section>
-<aside class="container-fluid col-4 col-lg-3" ng-show="showSideMenu">
-    <div class="container-fluid" ng-show="showBreadcrumbLinks">
-        <div class="d-inline p-2 flex-nowrap" ng-repeat="i in sideNavBreadcrumbItems">
-            <span ng-show="$index!=0">&rArr;</span>
-            <a href="{{i.navMenuHref}}" class="btn btn-outline-secondary" role="button">{{ i.linkTitle }}</a>
-        </div>
-    </div>
-    <div class="card" ng-show="showSideNavItems">
-        <div class="card-header" ng-show="showSideNavHeading"><h4>{{sideNavHeading}}</h4></div>
-        <div class="card-body">
-            <ul class="nav flex-column">
-                <li class="nav-item" ng-repeat="i in sideNavItems"><a ng-href="{{i.navMenuHref}}" ng-class="i.anchorCssClass">{{ i.linkTitle }}</a></li>
-                <li class="nav-item" ng-show="showCurrentItem">
-                    <a ng-href="#" ng-click="currentNavItem.onClick($event)" ng-class="currentNavItem.anchorCssClass">{{ currentNavItem.linkTitle }}</a>
-                    <ul class="nav flex-column" ng-show="currentNavItem.showNestedSideNavChildItems">
-                        <li class="nav-item" ng-repeat="i in currentNavItem.nestedSideNavChildItems"><a ng-href="{{i.navMenuHref}}" ng-class="i.anchorCssClass">{{ i.linkTitle }}</a></li>
+<div class="container-fluid">
+    <div class="row flex-nowrap">
+        <section ng-class="mainSectionClass" ng-transclude></section>
+        <aside class="container-fluid col-4 col-lg-3" ng-show="showSideMenu">
+            <div class="container-fluid" ng-show="showBreadcrumbLinks">
+                <div class="d-inline p-2 flex-nowrap" ng-repeat="i in sideNavBreadcrumbItems">
+                    <span ng-show="$index!=0">&rArr;</span>
+                    <a href="{{i.navMenuHref}}" class="btn btn-outline-secondary" role="button">{{ i.linkTitle }}</a>
+                </div>
+            </div>
+            <div class="card" ng-show="showSideNavItems">
+                <div class="card-header" ng-show="showSideNavHeading"><h4>{{sideNavHeading}}</h4></div>
+                <div class="card-body">
+                    <ul class="nav flex-column">
+                        <li class="nav-item" ng-repeat="i in sideNavItems"><a ng-href="{{i.navMenuHref}}" ng-class="i.anchorCssClass">{{ i.linkTitle }}</a></li>
+                        <li class="nav-item" ng-show="showCurrentItem">
+                            <a ng-href="#" ng-click="currentNavItem.onClick($event)" ng-class="currentNavItem.anchorCssClass">{{ currentNavItem.linkTitle }}</a>
+                            <ul class="nav flex-column" ng-show="currentNavItem.showNestedSideNavChildItems">
+                                <li class="nav-item" ng-repeat="i in currentNavItem.nestedSideNavChildItems"><a ng-href="{{i.navMenuHref}}" ng-class="i.anchorCssClass">{{ i.linkTitle }}</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item" ng-repeat="i in followingSideNavItems"><a ng-href="{{i.navMenuHref}}" ng-class="i.anchorCssClass">{{ i.linkTitle }}</a></li>
                     </ul>
-                </li>
-                <li class="nav-item" ng-repeat="i in followingSideNavItems"><a ng-href="{{i.navMenuHref}}" ng-class="i.anchorCssClass">{{ i.linkTitle }}</a></li>
-            </ul>
-        </div>
+                </div>
+            </div>
+        </aside>
     </div>
-</aside>
+</div>
 <footer class="container-fluid ">ServiceNow Installation and Implementation Documentation &copy; US Army 2019.</footer>
 <div id="mainModalPopupDialog" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mainModalPopupTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal" role="document">
